--- a/hero-conjurer/templates/bio.html
+++ b/hero-conjurer/templates/bio.html
@@ -1,5 +1,6 @@
 <div id='HC-form'>
     <form autocomplete='off'>
+        <input type='hidden' name='sheet' id='sheet' value='bio'>
         <!-- Tabs -->
         <div id='HC-header'>
             <button type='submit' class='tablinks race'>RACE</button>
