--- a/hero-conjurer/templates/bio.html
+++ b/hero-conjurer/templates/bio.html
@@ -3,15 +3,15 @@
         <input type='hidden' name='sheet' id='sheet' value='bio'>
         <!-- Tabs -->
         <div id='HC-header'>
-            <button type='submit' class='tablinks race'>RACE</button>
-            <button type='submit' class='tablinks class'>CLASS</button>
-            <button type='submit' class='tablinks abilities'>ABILITIES</button>
-            <button type='submit' class='tablinks background'>BACKGROUND</button>
-            <button type='submit' class='tablinks equipment'>EQUIPMENT</button>
-            <button type='submit' class='tablinks spells'>SPELLS</button>
-            <button type='submit' class='tablinks feats'>FEATS</button>
-            <button type='submit' class='tablinks bio'>BIO</button>
-            <button type='submit' class='tablinks summary'>SUMMARY</button>
+            <button type='submit' class='tablinks navigate race'>RACE</button>
+            <button type='submit' class='tablinks navigate class'>CLASS</button>
+            <button type='submit' class='tablinks navigate abilities'>ABILITIES</button>
+            <button type='submit' class='tablinks navigate background'>BACKGROUND</button>
+            <button type='submit' class='tablinks navigate equipment'>EQUIPMENT</button>
+            <button type='submit' class='tablinks navigate spells'>SPELLS</button>
+            <button type='submit' class='tablinks navigate feats'>FEATS</button>
+            <button type='submit' class='tablinks navigate bio'>BIO</button>
+            <button type='submit' class='tablinks navigate summary'>SUMMARY</button>
         </div>
         
         <!-- Tab content -->
@@ -37,8 +37,8 @@
         </div>
 
         <div id='HC-navigate'>
-            <button type='submit' class='submit prev' value='Submit'>PREVIOUS</button>
-            <button type='submit' class='submit next' value='Submit'>NEXT</button>
+            <button type='submit' class='navigate prev' value='Submit'>PREVIOUS</button>
+            <button type='submit' class='navigate next' value='Submit'>NEXT</button>
         </div>
     </form>
 </div>
